--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,6 +7,7 @@
 
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item{% if page.title == 'Home' %} active{% endif %}" href="{{ '/' | absolute_url }}">Home</a>
+    <a class="sidebar-nav-item" href="/about">About</a>
 
     {% comment %}
     The code below dynamically generates a sidebar nav of pages with
