--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -40,5 +40,7 @@
     <p>
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
     </p>
+    <a href="https://hits.seeyoufarm.com"><img
+        src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fhyo-choi.github.io&count_bg=%236AA0B5&title_bg=%236AA0B5&icon=&icon_color=%23000000&title=hits&edge_flat=false" /></a>
   </div>
 </div>
