Update: title for comment section

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,7 @@ layout: default
   {{ content }}
 </div>
 {% if page.comment %}
+<h2>Comments</h2>
 <script src="https://utteranc.es/client.js" repo="hyo-choi/blog-comments" issue-term="title" theme="github-light"
   crossorigin="anonymous" async>
   </script>
