Feat: add top button

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -36,3 +36,7 @@
     <a class="sidebar-nav-item" href="https://github.com/hyo-choi" target="_blank">GitHub</a>
   </nav>
 </div>
+
+<div>
+  <a class="scroll-top" href="#">⬆︎</a>
+</div>
