docs: TIL 추가, Unity 카테고리 포스팅을 Etc로 이동

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,6 +15,8 @@
     {% endcomment %}
 
     <div class="site-category">
+      <li style="list-style:none;" class="sidebar-nav-item"><a href="/TIL">#TIL</a></li>
+
       <li style="list-style:none;" class="sidebar-nav-item"><a href="/PROJECTS">#PROJECTS</a>
         <ul style="padding-left: 15px;">
           <li style="list-style:none;"><a href="/PROJECTS/to-do-list">to-do list</a></li>
@@ -23,11 +25,10 @@
 
       <li style="list-style:none;" class="sidebar-nav-item"><a href="/STUDY">#STUDY</a>
         <ul style="padding-left: 15px;">
-          <li style="list-style:none;"><a href="/STUDY/CPP">C++</a></li>
           <li style="list-style:none;"><a href="/STUDY/HTML">HTML</a></li>
           <li style="list-style:none;"><a href="/STUDY/CSS">CSS</a></li>
           <li style="list-style:none;"><a href="/STUDY/Javascript">Javascript</a></li>
-          <li style="list-style:none;"><a href="/STUDY/Unity">Unity</a></li>
+          <li style="list-style:none;"><a href="/STUDY/CPP">C++</a></li>
           <li style="list-style:none;"><a href="/STUDY/Etc">Etc</a></li>
         </ul>
       </li>
