--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -81,6 +81,7 @@ a:focus {
 
 /* Headings */
 h1, h2, h3, h4, h5, h6 {
+  margin-top: 2em;
   margin-bottom: .5rem;
   font-weight: bold;
   line-height: 1.25;
@@ -91,15 +92,12 @@ h1 {
   font-size: 2rem;
 }
 h2 {
-  margin-top: 1rem;
   font-size: 1.5rem;
 }
 h3 {
-  margin-top: 1.5rem;
   font-size: 1.25rem;
 }
 h4, h5, h6 {
-  margin-top: 1rem;
   font-size: 1rem;
 }
 
@@ -117,7 +115,6 @@ strong {
 /* Lists */
 ul, ol, dl {
   margin-top: 0;
-  margin-bottom: 1rem;
 }
 
 dt {
